--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Git Master true</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus sed harum, quaerat cumque quia unde. Magni soluta aperiam dicta consectetur eos, voluptate dolores aut nemo repudiandae porro id natus, aliquid?</p>
+	<a href="#">Click</a>
 </body>
 </html>
